testdata/baselines/reference/submodule/conformance/jsDeclarationsTypeReassignmentFromDeclaration.errors.txt
index.js(1,12): error TS8010: Type annotations can only be used in TypeScript files.


==== /some-mod.d.ts (0 errors) ====
    interface Item {
        x: string;
    }
    declare const items: Item[];
    export = items;
==== index.js (1 errors) ====
    /** @type {typeof import("/some-mod")} */
               ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    const items = [];
    module.exports = items;